syntax = "proto3";

package golem.cloud.projectpolicy.v1;

import public "golem/common/empty.proto";
import public "golem/common/error_body.proto";
import public "golem/cloud/projectpolicy/project_policy.proto";
import public "golem/cloud/projectpolicy/project_policy_data.proto";
import public "golem/cloud/projectpolicy/v1/project_policy_error.proto";
import public "golem/cloud/projectpolicy/project_policy_id.proto";

service CloudProjectPolicyService {
  rpc CreateProjectPolicy (CreateProjectPolicyRequest) returns (CreateProjectPolicyResponse);
  rpc GetProjectPolicy (GetProjectPolicyRequest) returns (GetProjectPolicyResponse);
}

message CreateProjectPolicyRequest {
  golem.cloud.projectpolicy.ProjectPolicyData projectPolicyData = 1;
}

message CreateProjectPolicyResponse {
  oneof result {
    golem.cloud.projectpolicy.ProjectPolicy success = 1;
    golem.cloud.projectpolicy.v1.ProjectPolicyError error = 2;
  }
}

message GetProjectPolicyRequest {
  golem.cloud.projectpolicy.ProjectPolicyId projectPolicyId = 1;
}

message GetProjectPolicyResponse {
  oneof result {
    golem.cloud.projectpolicy.ProjectPolicy success = 1;
    golem.cloud.projectpolicy.v1.ProjectPolicyError error = 2;
  }
}

