syntax = "proto3";

package golem.account;

message AccountData {
  string name = 1;
  string email = 2;
}
